styles/widgets/widget-Podcast/_podcast-now-playing.scss
.podcast-view-now-playing {
  padding: 0 15px;
  padding-bottom: 5px;
  text-align: left;
}

.podcast-now-playing-return-to-list {
  margin-top: 5px;
  text-align: center;
}

.podcast-now-playing-header {
  display: flex;
  align-items: center;
}

.podcast-now-playing-image {
  flex-shrink: 0;
  $image-size: 50px;
  width: $image-size;
  height: $image-size;
  margin-right: 15px;
  border-radius: 5px;
  background-color: $grey;
}
.podcast-now-playing-image-missing {
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;
}

h2.podcast-now-playing-episode-title {
  font-size: $font-size-m;
  padding-right: 5px;
  margin-bottom: 0;
}

.podcast-now-playing-audio-player-container {
  padding-top: 10px;
}

.podcast-now-playing-footer {
  text-align: center;
}

